# MCA_Classifier

./: LICENSE  README.md  download_models.sh  pyproject.toml  requirements.txt  setup.py
mca_classifier/: dataset.py  gradio_demo.py  gradio_utils.py  models.py  test.py  train.py  utils.py
