[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mca_classifier"
version = "0.1.0"
description = "Multi-Crop Attention-based Classifier for Species Classification"
authors = [
    { name = "Authors", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["mca_classifier"] 
